projects/bot_eval_run/batch_1772380631150/node-project-api-large_run_01/batch_run.log
C:\Users\atrep\Desktop\Test_AI_Code\shumilek\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
scripts/botEval.ts(5474,27): error TS18047: 'parsed' is possibly 'null'.

    at createTSError (C:\Users\atrep\Desktop\Test_AI_Code\shumilek\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\atrep\Desktop\Test_AI_Code\shumilek\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\atrep\Desktop\Test_AI_Code\shumilek\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\atrep\Desktop\Test_AI_Code\shumilek\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\atrep\Desktop\Test_AI_Code\shumilek\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1893:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\atrep\Desktop\Test_AI_Code\shumilek\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 18047 ]
}
